// product.proto
syntax = "proto3";

package product;
option go_package = "golang-gRPC-example/proto";

service ProductService {
    rpc GetProductByID (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
    int32 id = 1;
}

message ProductResponse {
    int32 id = 1;
    string name = 2;
    int32 price = 3;
}